--- a/index.htm
+++ b/index.htm
@@ -17,6 +17,7 @@
     <link rel="dns-prefetch" href="https://nominatim.openstreetmap.org">
     
     <title>MEGA+ Towing - Professional Evacuation & Recovery Services 24/7</title>
+    <link rel="icon" type="image/png" href="Photos/Logo.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="script.js" defer></script>
