--- a/services.htm
+++ b/services.htm
@@ -12,6 +12,7 @@
     <meta property="og:type" content="website">
     
     <title>Services - MEGA+ Towing | Professional Towing & Recovery Solutions 24/7</title>
+    <link rel="icon" type="image/png" href="Photos/Logo.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="script.js" defer></script>
