Add WebP format: Logo.webp (13.4KB, 72% smaller), GEO_Rustavi.webp (15.9KB, 60% smaller), use picture element for modern format support

--- a/index.htm
+++ b/index.htm
@@ -115,7 +115,10 @@
             <p class="service-area-intro" data-i18n="service_area.intro">We provide 24/7 professional towing and recovery services in Georgia, mostly in Rustavi. Response time: 15-20 minutes in Rustavi, up to 45 minutes in remote locations.</p>
             
             <div class="service-area-map">
-                <img src="Photos/GEO_Rustavi.png" alt="MEGA+ Towing Service Area - Kvemo Kartli Georgia" width="800" height="600">
+                <picture>
+                    <source srcset="Photos/GEO_Rustavi.webp" type="image/webp">
+                    <img src="Photos/GEO_Rustavi.png" alt="MEGA+ Towing Service Area - Kvemo Kartli Georgia" width="800" height="600">
+                </picture>
             </div>
 
             <div class="coverage-info">
@@ -153,7 +156,10 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
-                <img src="Photos/Logo.png" alt="MEGA+ Logo" class="footer-logo" width="200" height="200">
+                <picture>
+                    <source srcset="Photos/Logo.webp" type="image/webp">
+                    <img src="Photos/Logo.png" alt="MEGA+ Logo" class="footer-logo" width="200" height="200">
+                </picture>
             </div>
             <div class="footer-section">
                 <h4 data-i18n="footer.quick_links">Quick Links</h4>
