--- a/contact.htm
+++ b/contact.htm
@@ -205,7 +205,10 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
-                <img src="Photos/Logo.png" alt="MEGA+ Logo" class="footer-logo">
+                <picture>
+                    <source srcset="Photos/Logo.webp" type="image/webp">
+                    <img src="Photos/Logo.png" alt="MEGA+ Logo" class="footer-logo">
+                </picture>
             </div>
             <div class="footer-section">
                 <h4 data-i18n="footer.quick_links">Quick Links</h4>
