--- a/gallery.htm
+++ b/gallery.htm
@@ -11,9 +11,18 @@
     <meta property="og:description" content="View our professional towing and recovery operations gallery in Georgia.">
     <meta property="og:type" content="website">
     
+    <!-- Speed Optimization: Preconnect to external resources -->
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+    <link rel="dns-prefetch" href="https://nominatim.openstreetmap.org">
+    <!-- Preload critical fonts to break dependency chain -->
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/webfonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/webfonts/fa-solid-900.woff2" as="font" type="font/woff2" crossorigin>
+    
     <title>Photo Gallery - MEGA+ Towing | Professional Evacuation & Recovery Operations</title>
     <link rel="icon" type="image/png" href="Photos/Logo.png">
     <link rel="stylesheet" href="styles.css">
+    <!-- Preload hero background image for LCP optimization -->
+    <link rel="preload" href="./Photos/hero-bg.jpg" as="image" fetchpriority="high">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" media="print" onload="this.media='all'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></noscript>
     <script src="script.js" defer></script>
