--- a/services.htm
+++ b/services.htm
@@ -310,7 +310,7 @@
             <div class="footer-section">
                 <picture>
                     <source srcset="Photos/Logo.webp" type="image/webp">
-                    <img src="Photos/Logo.png" alt="MEGA+ Logo" class="footer-logo">
+                    <img src="Photos/Logo.png" alt="MEGA+ Logo" class="footer-logo" width="200" height="200">
                 </picture>
             </div>
             <div class="footer-section">
