--- a/index.htm
+++ b/index.htm
@@ -122,9 +122,9 @@
             <p class="service-area-intro" data-i18n="service_area.intro">We provide 24/7 professional towing and recovery services in Georgia, mostly in Rustavi. Response time: 15-20 minutes in Rustavi, up to 45 minutes in remote locations.</p>
             
             <div class="service-area-map">
-                <picture>
+                <picture style="width: 100%; height: auto; aspect-ratio: 4/3;">
                     <source srcset="Photos/GEO_Rustavi.webp" type="image/webp">
-                    <img src="Photos/GEO_Rustavi.png" alt="MEGA+ Towing Service Area - Kvemo Kartli Georgia" width="800" height="600">
+                    <img src="Photos/GEO_Rustavi.png" alt="MEGA+ Towing Service Area - Kvemo Kartli Georgia" width="800" height="600" style="width: 100%; height: auto;">
                 </picture>
             </div>
 
