--- a/index.htm
+++ b/index.htm
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
     <noscript><link rel="stylesheet" href="styles.css"></noscript>
     <!-- Preload hero background image for LCP optimization -->
+    <link rel="preload" href="./Photos/hero-bg.webp" as="image" fetchpriority="high" type="image/webp">
     <link rel="preload" href="./Photos/hero-bg.jpg" as="image" fetchpriority="high">
     <!-- Defer Font Awesome to prevent render blocking -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" media="print" onload="this.media='all'">
