--- a/gallery.htm
+++ b/gallery.htm
@@ -20,6 +20,14 @@
     
     <title>Photo Gallery - MEGA+ Towing | Professional Evacuation & Recovery Operations</title>
     <link rel="icon" type="image/png" href="Photos/Logo.png">
+    <!-- Critical CSS inline for faster FCP -->
+    <style>
+      body { margin: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; }
+      .header, .hero { background: #1a1a1a; color: white; }
+      .navbar { display: flex; align-items: center; padding: 1rem 2rem; }
+      .hero { min-height: 100vh; display: flex; align-items: center; }
+      .gallery-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 1rem; }
+    </style>
     <link rel="stylesheet" href="styles.css">
     <!-- Preload hero background image for LCP optimization -->
     <link rel="preload" href="./Photos/hero-bg.jpg" as="image" fetchpriority="high">
