--- a/services.htm
+++ b/services.htm
@@ -20,6 +20,13 @@
     
     <title>Services - MEGA+ Towing | Professional Towing & Recovery Solutions 24/7</title>
     <link rel="icon" type="image/png" href="Photos/Logo.png">
+    <!-- Critical CSS inline for faster FCP -->
+    <style>
+      body { margin: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; }
+      .header, .hero { background: #1a1a1a; color: white; }
+      .navbar { display: flex; align-items: center; padding: 1rem 2rem; }
+      .hero { min-height: 100vh; display: flex; align-items: center; }
+    </style>
     <link rel="stylesheet" href="styles.css">
     <!-- Preload hero background image for LCP optimization -->
     <link rel="preload" href="./Photos/hero-bg.jpg" as="image" fetchpriority="high">
