--- a/contact.htm
+++ b/contact.htm
@@ -30,8 +30,8 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Preload hero background image for LCP optimization -->
     <link rel="preload" href="./Photos/hero-bg.jpg" as="image" fetchpriority="high">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" media="print" onload="this.media='all'">
-    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></noscript>
+    <!-- Minimal Font Awesome CSS (only icons used on site) -->
+    <link rel="stylesheet" href="font-awesome-minimal.css">
     <script src="script.js" defer></script>
 </head>
 <body>
