Change default HTML language to Georgian (ka) and update all hardcoded text to Georgian

--- a/contact.htm
+++ b/contact.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ka">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -89,7 +89,7 @@
     <section class="hero">
         <div class="hero-left">
             <div class="hero-content">
-                <h1 data-i18n="contact_page.title">Contact Us</h1>
+                <h1 data-i18n="contact_page.title">დაგვილმდით</h1>
             </div>
         </div>
         <div class="hero-right">
