--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ka">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,27 +49,23 @@
         <nav class="navbar">
             <a href="index.htm" class="logo">
                 <img src="Photos/Logo.png" alt="MEGA+ Logo" width="60" height="60">
-                <div class="logo-text">
-                    <div class="company-name">MEGA+ Towing</div>
-                    <div class="tagline">Fast & Reliable</div>
-                </div>
             </a>
             <ul class="nav-links">
-                <li><a href="index.htm" class="active" data-i18n="nav.home">Home</a></li>
+                <li><a href="index.htm" class="active" data-i18n="nav.home">მთავარი</a></li>
                 <li class="dropdown">
-                    <a href="services.htm"><span data-i18n="nav.services">Services</span> <i class="fas fa-chevron-down dropdown-icon"></i></a>
+                    <a href="services.htm"><span data-i18n="nav.services">სერვისები</span> <i class="fas fa-chevron-down dropdown-icon"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="services.htm#evacuator" data-i18n="services_page.evacuator.title">Evacuator</a></li>
-                        <li><a href="services.htm#crane" data-i18n="services_page.crane.title">Crane</a></li>
-                        <li><a href="services.htm#special-equipment" data-i18n="services_page.special_equipment.title">Special Equipment</a></li>
-                        <li><a href="services.htm#starting" data-i18n="services_page.starting.title">Starting the Car</a></li>
-                        <li><a href="services.htm#door" data-i18n="services_page.door.title">Opening Car Door</a></li>
-                        <li><a href="services.htm#fuel" data-i18n="services_page.fuel.title">Fuel Delivery</a></li>
-                        <li><a href="services.htm#tire" data-i18n="services_page.tire.title">Tire Change</a></li>
+                        <li><a href="services.htm#evacuator" data-i18n="services_page.evacuator.title">ევაკუატორი</a></li>
+                        <li><a href="services.htm#crane" data-i18n="services_page.crane.title">ამწე კრანი</a></li>
+                        <li><a href="services.htm#special-equipment" data-i18n="services_page.special_equipment.title">სპეც-ტექნიკა</a></li>
+                        <li><a href="services.htm#starting" data-i18n="services_page.starting.title">მანქანის დაქოქვა</a></li>
+                        <li><a href="services.htm#door" data-i18n="services_page.door.title">კარის გახსნა</a></li>
+                        <li><a href="services.htm#fuel" data-i18n="services_page.fuel.title">საწვავის მიწოდება</a></li>
+                        <li><a href="services.htm#tire" data-i18n="services_page.tire.title">საბურავის შეცვლა</a></li>
                     </ul>
                 </li>
-                <li><a href="gallery.htm" data-i18n="nav.gallery">Photo Gallery</a></li>
-                <li><a href="contact.htm" data-i18n="nav.contact">Contact</a></li>
+                <li><a href="gallery.htm" data-i18n="nav.gallery">ფოტო გალერეა</a></li>
+                <li><a href="contact.htm" data-i18n="nav.contact">კონტაქტი</a></li>
             </ul>
             <div class="header-contact">
                 <a href="tel:+995551305305" class="phone-link">
@@ -77,9 +73,9 @@
                 </a>
             </div>
             <div class="language-switcher" id="languageSwitcher">
-                <button class="lang-btn" data-lang="en">EN</button>
-                <button class="lang-btn" data-lang="ge">GE</button>
-                <button class="lang-btn" data-lang="ru">RU</button>
+                <button class="lang-btn" data-lang="en">ინგ</button>
+                <button class="lang-btn" data-lang="ge">ქარ</button>
+                <button class="lang-btn" data-lang="ru">რუს</button>
             </div>
             <div class="mobile-menu-toggle">
                 <i class="fas fa-bars"></i>
@@ -91,9 +87,9 @@
     <section class="hero">
         <div class="hero-left">
             <div class="hero-content">
-                <h1 data-i18n="hero.title">Professional Evacuation Services</h1>
-                <p data-i18n="hero.subtitle">24/7 Emergency Towing & Recovery Solutions</p>
-                <a href="tel:+995551305305" class="cta-button" style="display: inline-block; text-decoration: none;" data-i18n="hero.cta">📞 Call Us Now</a>
+                <h1 data-i18n="hero.title">ევაკუატორის მომსახურება რუსთავსა და რეგიონებში</h1>
+                <p data-i18n="hero.subtitle">24/7 საავარიო გადაყვანა და ტექნიკური დახმარება</p>
+                <a href="tel:+995551305305" class="cta-button" style="display: inline-block; text-decoration: none;" data-i18n="hero.cta">📞 დაგვირეკეთ ახლავე</a>
             </div>
         </div>
         <div class="hero-right"></div>
@@ -103,35 +99,35 @@
     <main class="content">
         <!-- WHY CHOOSE US SECTION -->
         <section class="why-choose-us">
-            <h2 data-i18n="why_choose.title">Why Choose MEGA+ Towing?</h2>
+            <h2 data-i18n="why_choose.title">რატომ უნდა აირჩიოთ MEGA+ ევაკუატორი?</h2>
             <div class="features-grid">
                 <div class="feature">
                     <div class="feature-number">24/7</div>
-                    <h3 data-i18n="why_choose.feature1_title">Round-the-Clock Service</h3>
-                    <p data-i18n="why_choose.feature1_desc">Available anytime, day or night, for emergency situations.</p>
+                    <h3 data-i18n="why_choose.feature1_title">სადღეღამისო სერვისი</h3>
+                    <p data-i18n="why_choose.feature1_desc">ხელმისაწვდომი ნებისმიერ დროს, დღე და ღამე, საგანგებო სიტუაციებისთვის.</p>
                 </div>
                 <div class="feature">
                     <div class="feature-number">17+</div>
-                    <h3 data-i18n="why_choose.feature2_title">Years of Experience</h3>
-                    <p data-i18n="why_choose.feature2_desc">Professional vehicle recovery and towing with decades of experience.</p>
+                    <h3 data-i18n="why_choose.feature2_title">წლიანი გამოცდილება</h3>
+                    <p data-i18n="why_choose.feature2_desc">პროფესიონალური ევაკუაციის სერვისი 2008 წლიდან. MEGA+ დაფუძნებულია 2018 წელს.</p>
                 </div>
                 <div class="feature">
                     <div class="feature-number">1000+</div>
-                    <h3 data-i18n="why_choose.feature3_title">Vehicles We Helped</h3>
-                    <p data-i18n="why_choose.feature3_desc">Thousands of successful operations completed with satisfied customers.</p>
+                    <h3 data-i18n="why_choose.feature3_title">დახმარებული ავტომობილი</h3>
+                    <p data-i18n="why_choose.feature3_desc">ათასობით წარმატებული ოპერაცია და კმაყოფილი მომხმარებელი.</p>
                 </div>
                 <div class="feature">
                     <div class="feature-number">100%</div>
-                    <h3 data-i18n="why_choose.feature4_title">Professional Team</h3>
-                    <p data-i18n="why_choose.feature4_desc">Certified and trained operators with state-of-the-art equipment.</p>
+                    <h3 data-i18n="why_choose.feature4_title">პროფესიონალთა გუნდი</h3>
+                    <p data-i18n="why_choose.feature4_desc">გამოცდილი მძღოლები უამრავი ტექნიკური აღჭურვილობით.</p>
                 </div>
             </div>
         </section>
 
         <!-- SERVICE AREA MAP -->
         <section class="service-area-section">
-            <h2 data-i18n="service_area.title">Our Service Area</h2>
-            <p class="service-area-intro" data-i18n="service_area.intro">We provide 24/7 professional towing and recovery services in Georgia, mostly in Rustavi. Response time: 15-20 minutes in Rustavi, up to 45 minutes in remote locations.</p>
+            <h2 data-i18n="service_area.title">მომსახურების არეალი</h2>
+            <p class="service-area-intro" data-i18n="service_area.intro">გთავაზობთ ევაკუატორის პროფესიონალურ მომსახურებას 24/7-ზე მთელი საქართველოს მასშტაბით, ძირითადად კი რუსთავში. ადგილზე მისვლის დრო: 15-30 წუთი რუსთავში, 45 წუთამდე — ქალაქგარეთ ლოკაციებზე.</p>
             
             <div class="service-area-map">
                 <picture>
@@ -142,16 +138,16 @@
 
             <div class="coverage-info">
                 <div class="coverage-item">
-                    <h4><i class="fas fa-map-marker-alt"></i> <span data-i18n="service_area.coverage_area">Coverage Area</span></h4>
-                    <p data-i18n="service_area.coverage_area_text">Whole Georgia, but mostly Rustavi</p>
+                    <h4><i class="fas fa-map-marker-alt"></i> <span data-i18n="service_area.coverage_area">დაფარვის ზონა</span></h4>
+                    <p data-i18n="service_area.coverage_area_text">მთელი საქართველო, ძირითადად რუსთავი</p>
                 </div>
                 <div class="coverage-item">
-                    <h4><i class="fas fa-clock"></i> <span data-i18n="service_area.response_time">Response Time</span></h4>
-                    <p data-i18n="service_area.response_time_text">15-30 min in Rustavi • 30-45 min outside city</p>
+                    <h4><i class="fas fa-clock"></i> <span data-i18n="service_area.response_time">მისვლის დრო</span></h4>
+                    <p data-i18n="service_area.response_time_text">15-30 წთ რუსთავში • 30-45 წთ ქალაქგარეთ</p>
                 </div>
                 <div class="coverage-item">
-                    <h4><i class="fas fa-phone-alt"></i> <span data-i18n="service_area.available">Available</span></h4>
-                    <p data-i18n="service_area.available_text">24 hours a day, 7 days a week, 365 days a year</p>
+                    <h4><i class="fas fa-phone-alt"></i> <span data-i18n="service_area.available">ხელმისაწვდომი</span></h4>
+                    <p data-i18n="service_area.available_text">24 საათი, კვირაში 7 დღე, წელიწადში 365 დღე</p>
                 </div>
             </div>
         </section>
@@ -159,15 +155,15 @@
         <!-- EMERGENCY LOCATION WIDGET -->
         <section class="location-widget-section">
             <div class="location-widget">
-                <h3 data-i18n="location_widget.title"><i class="fas fa-map-pin"></i> Tell Us Your Location</h3>
-                <p data-i18n="location_widget.subtitle">Fastest way to get help - send your location now</p>
+                <h3 data-i18n="location_widget.title"><i class="fas fa-map-pin"></i> მიუთითეთ თქვენი ადგილმდებარეობა</h3>
+                <p data-i18n="location_widget.subtitle">სწრაფი დახმარების მიღების გზა — გამოგვიგზავნეთ თქვენი ლოკაცია</p>
                 <div class="location-widget-content">
                     <input type="text" id="locationInput" data-i18n-placeholder="location_widget.placeholder" placeholder="Enter your location (e.g., Highway 10, Rustavi)" class="location-input" />
                     <button class="submit-location-btn" onclick="submitLocation()" data-i18n="location_widget.button">
-                        <i class="fas fa-phone"></i> Call & Send Location
+                        <i class="fas fa-phone"></i> მოგვწერეთ Whatsapp-ზე
                     </button>
                 </div>
-                <p class="widget-note" data-i18n="location_widget.note">We serve Georgia • Response time: 15-40 minutes</p>
+                <p class="widget-note" data-i18n="location_widget.note">ვმუშაობთ მთელ საქართველოში • მისვლის დრო: 15-40 წუთი</p>
             </div>
         </section>
     </main>
@@ -181,7 +177,7 @@
                 </picture>
             </div>
             <div class="footer-section">
-                <h4 data-i18n="footer.quick_links">Quick Links</h4>
+                <h4 data-i18n="footer.quick_links">მენიუ</h4>
                 <ul>
                     <li><a href="index.htm" data-i18n="nav.home">Home</a></li>
                     <li><a href="services.htm" data-i18n="nav.services">Services</a></li>
@@ -190,13 +186,13 @@
                 </ul>
             </div>
             <div class="footer-section">
-                <h4 data-i18n="footer.contact_info">Contact Info</h4>
-                <p data-i18n="footer.phone">Phone: +995 551 305 305</p>
-                <p data-i18n="footer.email">Email: megaplusrustavi@gmail.com</p>
-                <p data-i18n="footer.available">Available: 24/7</p>
+                <h4 data-i18n="footer.contact_info">საკონტაქტო ინფორმაცია</h4>
+                <p data-i18n="footer.phone">ტელეფონი: +995 551 305 305</p>
+                <p data-i18n="footer.email">ელ-ფოსტა: megaplusrustavi@gmail.com</p>
+                <p data-i18n="footer.available">ხელმისაწვდომი: 24/7</p>
             </div>
             <div class="footer-section">
-                <h4 data-i18n="footer.follow_us">Follow Us</h4>
+                <h4 data-i18n="footer.follow_us">გამოგვყევით</h4>
                 <div class="social-links">
                     <a href="https://www.facebook.com/evacuator.rustavi" class="social-icon" title="Facebook" target="_blank"><i class="fab fa-facebook"></i></a>
                     <a href="https://www.tiktok.com/@_mega_305_?is_from_webapp=1&sender_device=pc" class="social-icon" title="TikTok" target="_blank"><i class="fab fa-tiktok"></i></a>
@@ -211,7 +207,7 @@
     <!-- STICKY CALL BUTTON -->
     <a href="tel:+995551305305" class="sticky-call-btn">
         <i class="fas fa-phone"></i>
-        <span data-i18n="sticky_btn">Call Us</span>
+        <span data-i18n="sticky_btn">დაგვირეკეთ</span>
     </a>
 </body>
 </html>
