--- a/gallery.htm
+++ b/gallery.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ka">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -92,7 +92,7 @@
     <section class="hero">
         <div class="hero-left">
             <div class="hero-content">
-                <h1 data-i18n="gallery_page.title">Photo Gallery</h1>
+                <h1 data-i18n="gallery_page.title">დიდი ფოთო დიდო გალერეა</h1>
             </div>
         </div>
         <div class="hero-right">
