--- a/services.htm
+++ b/services.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ka">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,21 +54,21 @@
                 </div>
             </a>
             <ul class="nav-links">
-                <li><a href="index.htm" data-i18n="nav.home">Home</a></li>
+                <li><a href="index.htm" data-i18n="nav.home">მთავარი</a></li>
                 <li class="dropdown">
-                    <a href="services.htm"><span data-i18n="nav.services">Services</span> <i class="fas fa-chevron-down dropdown-icon"></i></a>
+                    <a href="services.htm"><span data-i18n="nav.services">სერვიბები</span> <i class="fas fa-chevron-down dropdown-icon"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#evacuator" data-i18n="services_page.evacuator.title">Evacuator</a></li>
-                        <li><a href="#crane" data-i18n="services_page.crane.title">Crane</a></li>
-                        <li><a href="#special-equipment" data-i18n="services_page.special_equipment.title">Special Equipment</a></li>
-                        <li><a href="#starting" data-i18n="services_page.starting.title">Starting the Car</a></li>
-                        <li><a href="#door" data-i18n="services_page.door.title">Opening Car Door</a></li>
-                        <li><a href="#fuel" data-i18n="services_page.fuel.title">Fuel Delivery</a></li>
-                        <li><a href="#tire" data-i18n="services_page.tire.title">Tire Change</a></li>
+                        <li><a href="#evacuator" data-i18n="services_page.evacuator.title">ევაკუატორი</a></li>
+                        <li><a href="#crane" data-i18n="services_page.crane.title">ამწე კრაიი</a></li>
+                        <li><a href="#special-equipment" data-i18n="services_page.special_equipment.title">სპეც-გედეოლი</a></li>
+                        <li><a href="#starting" data-i18n="services_page.starting.title">მანქანის დაკოკვი</a></li>
+                        <li><a href="#door" data-i18n="services_page.door.title">კარის გაიოთთვეელი</a></li>
+                        <li><a href="#fuel" data-i18n="services_page.fuel.title">დთემზპლითელი</a></li>
+                        <li><a href="#tire" data-i18n="services_page.tire.title">დაბურავის შებითი</a></li>
                     </ul>
                 </li>
-                <li><a href="gallery.htm" data-i18n="nav.gallery">Photo Gallery</a></li>
-                <li><a href="contact.htm" data-i18n="nav.contact">Contact</a></li>
+                <li><a href="gallery.htm" data-i18n="nav.gallery">ფოთო გალერეა</a></li>
+                <li><a href="contact.htm" data-i18n="nav.contact">დაგილმდით</a></li>
             </ul>
             <div class="header-contact">
                 <a href="tel:+995551305305" class="phone-link">
@@ -89,8 +89,8 @@
     <section class="hero">
         <div class="hero-left">
             <div class="hero-content">
-                <h1 data-i18n="services_page.title">Our Services</h1>
-                <p data-i18n="services_page.intro">Comprehensive recovery solutions</p>
+                <h1 data-i18n="services_page.title">ლამელი სერვიდი</h1>
+                <p data-i18n="services_page.intro">დლოლეტი გედეოლითა და ავთომობილიების ევაკუატიო</p>
             </div>
         </div>
         <div class="hero-right">
