--- a/services.htm
+++ b/services.htm
@@ -41,6 +41,10 @@
         gtag('js', new Date());
         gtag('config', 'G-V0RS4B947Q');
     </script>
+    <!-- Force Georgian as default language -->
+    <script>
+        localStorage.setItem('selectedLanguage', 'ge');
+    </script>
 </head>
 <body>
     <!-- HEADER & NAVIGATION -->
@@ -76,8 +80,8 @@
                 </a>
             </div>
             <div class="language-switcher" id="languageSwitcher">
-                <button class="lang-btn" data-lang="en">EN</button>
                 <button class="lang-btn" data-lang="ge">GE</button>
+                <button class="lang-btn" data-lang="en">EN</button>
                 <button class="lang-btn" data-lang="ru">RU</button>
             </div>
             <div class="mobile-menu-toggle">
