--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <link rel="icon" type="image/png" href="Photos/Logo.png">
     <!-- Critical CSS inline for faster FCP -->
     <style>
-      body { margin: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; }
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;500;700&display=swap');
+      body { margin: 0; font-family: 'Noto Sans Georgian', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; }
       .header, .hero { background: #1a1a1a; color: white; }
       .navbar { display: flex; align-items: center; padding: 1rem 2rem; }
       .hero { min-height: 100vh; display: flex; align-items: center; }
@@ -41,10 +42,6 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
         gtag('config', 'G-V0RS4B947Q');
-    </script>
-    <!-- Force Georgian as default language -->
-    <script>
-        localStorage.setItem('selectedLanguage', 'ge');
     </script>
 </head>
 <body>
@@ -77,9 +74,9 @@
                 </a>
             </div>
             <div class="language-switcher" id="languageSwitcher">
-                <button class="lang-btn" data-lang="ge">ქარ</button>
-                <button class="lang-btn" data-lang="en">ინგ</button>
-                <button class="lang-btn" data-lang="ru">რუს</button>
+                <button class="lang-btn" data-lang="ge">GE</button>
+                <button class="lang-btn" data-lang="en">EN</button>
+                <button class="lang-btn" data-lang="ru">RU</button>
             </div>
             <div class="mobile-menu-toggle">
                 <i class="fas fa-bars"></i>
