Feature: Make footer logo clickable - links to home page with hover animation

--- a/index.html
+++ b/index.html
@@ -183,10 +183,12 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
-                <picture>
-                    <source srcset="Photos/Logo.webp" type="image/webp">
-                    <img src="Photos/Logo.png" alt="MEGA+ Logo" class="footer-logo" width="200" height="200">
-                </picture>
+                <a href="index.html" class="footer-logo-link" title="Go to Home">
+                    <picture>
+                        <source srcset="Photos/Logo.webp" type="image/webp">
+                        <img src="Photos/Logo.png" alt="MEGA+ Logo" class="footer-logo" width="200" height="200">
+                    </picture>
+                </a>
             </div>
             <div class="footer-section">
                 <h4 data-i18n="footer.quick_links">მენიუ</h4>
