Fix contact form handler and improve privacy policy styling

--- a/privacy.html
+++ b/privacy.html
@@ -5,43 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>კონფიდენციალურობის პოლიტიკა - MEGA+ Evacuator</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* მარტივი სტილი ტექსტისთვის, რომ კარგად გამოჩნდეს */
+        body { font-family: sans-serif; line-height: 1.6; color: #333; }
+        .legal-container { padding: 40px 20px; max-width: 800px; margin: 0 auto; background: #fff; }
+        h1, h2 { color: #2c3e50; }
+        ul { margin-bottom: 20px; }
+        .back-link { display: inline-block; margin-top: 20px; text-decoration: none; color: #007bff; font-weight: bold; }
+    </style>
 </head>
 <body>
-    <div class="container" style="padding: 20px; max-width: 800px; margin: 0 auto;">
+    <div class="legal-container">
         <h1>კონფიდენციალურობის პოლიტიკა</h1>
-        <p>ბოლო განახლება: 30 ნოემბერი, 2025</p>
+        <p><strong>ბოლო განახლება:</strong> 30 ნოემბერი, 2025</p>
 
         <h2>1. ზოგადი ინფორმაცია</h2>
-        <p>კომპანია "MEGA+ Evacuator" (შემდგომში "ჩვენ") პატივს სცემს მომხმარებლის პერსონალურ მონაცემებს. წინამდებარე პოლიტიკა განმარტავს, თუ როგორ ვამუშავებთ თქვენს ინფორმაციას საქართველოს "პერსონალურ მონაცემთა დაცვის შესახებ" კანონის შესაბამისად.</p>
+        <p>კომპანია "MEGA+ Evacuator" (შემდგომში "ჩვენ") პატივს სცემს მომხმარებლის პერსონალურ მონაცემებს. წინამდებარე პოლიტიკა განმარტავს, თუ როგორ ვამუშავებთ თქვენს ინფორმაციას "პერსონალურ მონაცემთა დაცვის შესახებ" საქართველოს კანონის შესაბამისად.</p>
 
         <h2>2. რა ინფორმაციას ვაგროვებთ?</h2>
-        <p>ჩვენ შეიძლება შევაგროვოთ შემდეგი სახის მონაცემები:</p>
+        <p>ჩვენ ვაგროვებთ მხოლოდ იმ მინიმალურ ინფორმაციას, რაც მომსახურების გასაწევადაა საჭირო:</p>
         <ul>
-            <li><strong>საკონტაქტო ინფორმაცია:</strong> სახელი, ტელეფონის ნომერი (როდესაც გვიკავშირდებით).</li>
-            <li><strong>ლოკაციის მონაცემები:</strong> თქვენი ადგილმდებარეობა, რომელსაც გვიზიარებთ WhatsApp-ის ან ზარის მეშვეობით ევაკუატორის გამოსაძახებლად.</li>
-            <li><strong>ტექნიკური მონაცემები:</strong> IP მისამართი, ბრაუზერის ტიპი და საიტზე ქცევის ისტორია.</li>
+            <li><strong>საკონტაქტო ინფორმაცია:</strong> ტელეფონის ნომერი (როდესაც გვიკავშირდებით).</li>
+            <li><strong>ლოკაციის მონაცემები:</strong> თქვენი ადგილმდებარეობა, რომელსაც ნებაყოფლობით გვიზიარებთ (მაგ: WhatsApp-ის ან ზარის მეშვეობით) ევაკუატორის გამოსაძახებლად.</li>
+            <li><strong>ტექნიკური მონაცემები:</strong> IP მისამართი, ბრაუზერის ტიპი და საიტზე ქცევის ისტორია (Google Analytics-ის მეშვეობით).</li>
         </ul>
 
-        <h2>3. Google Analytics და Cookies (ქუქი-ფაილები)</h2>
-        <p>ჩვენი ვებ-გვერდი იყენებს <strong>Google Analytics</strong>-ს, რათა გავიგოთ, როგორ იყენებენ მომხმარებლები ჩვენს საიტს. Google Analytics იყენებს "ქუქი-ფაილებს" (Cookies) — მცირე ტექსტურ ფაილებს, რომლებიც ინახება თქვენს მოწყობილობაში.</p>
-        <p>ეს მონაცემები არის ანონიმური და გამოიყენება მხოლოდ სტატისტიკისთვის (მაგალითად: საიტის ვიზიტორთა რაოდენობა). თქვენ შეგიძლიათ გათიშოთ Google Analytics-ის მიერ მონაცემების შეგროვება სპეციალური ბრაუზერის დანამატებით.</p>
+        <h2>3. მონაცემთა შენახვის ვადა</h2>
+        <p>თქვენი პერსონალური მონაცემები (მაგ: ტელეფონის ნომერი და ლოკაცია) ინახება მხოლოდ იმდენ ხანს, რამდენიც საჭიროა მომსახურების სრულყოფილად გაწევისთვის. მომსახურების დასრულების შემდეგ, ლოკაციის მონაცემები იშლება ჩვენი სისტემებიდან, გარდა იმ შემთხვევისა, როდესაც კანონი მოითხოვს მათ შენახვას (მაგ: საგადასახადო მიზნებისთვის).</p>
 
-        <h2>4. მონაცემთა გამოყენების მიზანი</h2>
-        <p>თქვენი მონაცემები გამოიყენება მხოლოდ:</p>
+        <h2>4. მომხმარებლის უფლებები</h2>
+        <p>საქართველოს კანონმდებლობის თანახმად, თქვენ გაქვთ უფლება:</p>
         <ul>
-            <li>ევაკუატორის მომსახურების გასაწევად;</li>
-            <li>მომხმარებელთან კომუნიკაციისთვის;</li>
-            <li>ვებ-გვერდის ხარისხის გასაუმჯობესებლად.</li>
+            <li>მოითხოვოთ ინფორმაცია თქვენს შესახებ დამუშავებული მონაცემების თაობაზე;</li>
+            <li>მოითხოვოთ არასწორი მონაცემების გასწორება ან განახლება;</li>
+            <li>მოითხოვოთ მონაცემების დამუშავების შეწყვეტა ან წაშლა.</li>
         </ul>
+        <p>ამ უფლებების განსახორციელებლად, გთხოვთ დაგვიკავშირდეთ საიტზე მითითებულ საკონტაქტო ნომერზე.</p>
 
-        <h2>5. მესამე მხარეები</h2>
-        <p>ჩვენ არ გადავცემთ თქვენს პირად მონაცემებს მესამე პირებს, გარდა კანონით გათვალისწინებული შემთხვევებისა. გთხოვთ გაითვალისწინოთ, რომ WhatsApp-ით სარგებლობისას მოქმედებს WhatsApp-ის კონფიდენციალურობის პოლიტიკა.</p>
+        <h2>5. Google Analytics და Cookies</h2>
+        <p>ჩვენი ვებ-გვერდი იყენებს <strong>Google Analytics</strong>-ს სტატისტიკური მიზნებისთვის. ეს სერვისი აგროვებს ანონიმურ ინფორმაციას საიტის ვიზიტორების შესახებ. თქვენ შეგიძლიათ შეზღუდოთ Google Analytics-ის მოქმედება ბრაუზერის პარამეტრებიდან.</p>
 
-        <h2>6. კონტაქტი</h2>
-        <p>შეკითხვების შემთხვევაში, მოგვწერეთ ან დაგვირეკეთ საიტზე მითითებულ ნომერზე.</p>
+        <h2>6. პასუხისმგებლობის შეზღუდვა</h2>
+        <p>ჩვენ ვიღებთ ყველა გონივრულ ზომას მონაცემთა უსაფრთხოებისთვის, თუმცა ინტერნეტით ინფორმაციის გადაცემა არ არის აბსოლუტურად დაცული და ჩვენ ვერ გავცემთ სრულ გარანტიას მესამე პირების მიერ მონაცემთა არასანქცირებულ წვდომაზე.</p>
+
+        <h2>7. კონტაქტი</h2>
+        <p>ნებისმიერი კითხვის შემთხვევაში, გთხოვთ დაგვიკავშირდეთ.</p>
         
         <br>
-        <a href="index.html">მთავარ გვერდზე დაბრუნება</a>
+        <a href="index.html" class="back-link">← მთავარ გვერდზე დაბრუნება</a>
     </div>
 </body>
 </html>
