--- a/gallery.html
+++ b/gallery.html
@@ -21,13 +21,14 @@
     <title>Photo Gallery - MEGA+ Towing | Professional Evacuation & Recovery Operations</title>
     <link rel="icon" type="image/png" href="Photos/Logo.png">
     <!-- Critical CSS inline for faster FCP -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;500;700&display=swap');
       body { margin: 0; font-family: 'Noto Sans Georgian', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; }
       .header, .hero { background: #1a1a1a; color: white; }
       .navbar { display: flex; align-items: center; padding: 1rem 2rem; }
       .hero { min-height: 100vh; display: flex; align-items: center; }
-      .gallery-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 1rem; }
     </style>
     <link rel="stylesheet" href="styles.css">
     <!-- Preload hero background image for LCP optimization -->
