--- a/gallery.html
+++ b/gallery.html
@@ -21,14 +21,13 @@
     <title>Photo Gallery - MEGA+ Towing | Professional Evacuation & Recovery Operations</title>
     <link rel="icon" type="image/png" href="Photos/Logo.png">
     <!-- Critical CSS inline for faster FCP -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;500;700&display=swap');
       body { margin: 0; font-family: 'Noto Sans Georgian', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; }
       .header, .hero { background: #1a1a1a; color: white; }
       .navbar { display: flex; align-items: center; padding: 1rem 2rem; }
       .hero { min-height: 100vh; display: flex; align-items: center; }
+      .gallery-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 1rem; }
     </style>
     <link rel="stylesheet" href="styles.css">
     <!-- Preload hero background image for LCP optimization -->
@@ -117,76 +116,76 @@
             <div class="gallery-grid">
                 <!-- Gallery Items -->
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/1.jpg" alt="ევაკუატორი რუსთავში - 1" loading="lazy">
+                    <img src="Photos/1.webp" alt="ევაკუატორი რუსთავში - 1" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/2.jpg" alt="ევაკუატორი რუსთავში - 2" loading="lazy">
+                    <img src="Photos/2.webp" alt="ევაკუატორი რუსთავში - 2" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/3.jpg" alt="ევაკუატორი რუსთავში - 3" loading="lazy">
+                    <img src="Photos/3.webp" alt="ევაკუატორი რუსთავში - 3" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/4.jpg" alt="ევაკუატორი რუსთავში - 4" loading="lazy">
+                    <img src="Photos/4.webp" alt="ევაკუატორი რუსთავში - 4" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/5.jpg" alt="ევაკუატორი რუსთავში - 5" loading="lazy">
+                    <img src="Photos/5.webp" alt="ევაკუატორი რუსთავში - 5" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/6.jpg" alt="ევაკუატორი რუსთავში - 6" loading="lazy">
+                    <img src="Photos/6.webp" alt="ევაკუატორი რუსთავში - 6" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/7.jpg" alt="ევაკუატორი რუსთავში - 7" loading="lazy">
+                    <img src="Photos/7.webp" alt="ევაკუატორი რუსთავში - 7" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/8.jpg" alt="ევაკუატორი რუსთავში - 8" loading="lazy">
+                    <img src="Photos/8.webp" alt="ევაკუატორი რუსთავში - 8" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/9.jpg" alt="ევაკუატორი რუსთავში - 9" loading="lazy">
+                    <img src="Photos/9.webp" alt="ევაკუატორი რუსთავში - 9" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/10.jpg" alt="ევაკუატორი რუსთავში - 10" loading="lazy">
+                    <img src="Photos/10.webp" alt="ევაკუატორი რუსთავში - 10" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/11.jpg" alt="ევაკუატორი რუსთავში - 11" loading="lazy">
+                    <img src="Photos/11.webp" alt="ევაკუატორი რუსთავში - 11" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/12.jpg" alt="ევაკუატორი რუსთავში - 12" loading="lazy">
+                    <img src="Photos/12.webp" alt="ევაკუატორი რუსთავში - 12" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/13.jpg" alt="ევაკუატორი რუსთავში - 13" loading="lazy">
+                    <img src="Photos/13.webp" alt="ევაკუატორი რუსთავში - 13" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/14.jpg" alt="ევაკუატორი რუსთავში - 14" loading="lazy">
+                    <img src="Photos/14.webp" alt="ევაკუატორი რუსთავში - 14" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/15.jpg" alt="ევაკუატორი რუსთავში - 15" loading="lazy">
+                    <img src="Photos/15.webp" alt="ევაკუატორი რუსთავში - 15" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/16.jpg" alt="ევაკუატორი რუსთავში - 16" loading="lazy">
+                    <img src="Photos/16.webp" alt="ევაკუატორი რუსთავში - 16" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/17.jpg" alt="ევაკუატორი რუსთავში - 17" loading="lazy">
+                    <img src="Photos/17.webp" alt="ევაკუატორი რუსთავში - 17" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/18.jpg" alt="ევაკუატორი რუსთავში - 18" loading="lazy">
+                    <img src="Photos/18.webp" alt="ევაკუატორი რუსთავში - 18" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/19.jpg" alt="ევაკუატორი რუსთავში - 19" loading="lazy">
+                    <img src="Photos/19.webp" alt="ევაკუატორი რუსთავში - 19" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/20.jpg" alt="ევაკუატორი რუსთავში - 20" loading="lazy">
+                    <img src="Photos/20.webp" alt="ევაკუატორი რუსთავში - 20" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/21.jpg" alt="ევაკუატორი რუსთავში - 21" loading="lazy">
+                    <img src="Photos/21.webp" alt="ევაკუატორი რუსთავში - 21" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/22.jpg" alt="ევაკუატორი რუსთავში - 22" loading="lazy">
+                    <img src="Photos/22.webp" alt="ევაკუატორი რუსთავში - 22" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/23.jpg" alt="ევაკუატორი რუსთავში - 23" loading="lazy">
+                    <img src="Photos/23.webp" alt="ევაკუატორი რუსთავში - 23" loading="lazy">
                 </div>
                 <div class="gallery-card" onclick="openLightbox(this)">
-                    <img src="Photos/24.jpg" alt="ევაკუატორი რუსთავში - 24" loading="lazy">
+                    <img src="Photos/24.webp" alt="ევაკუატორი რუსთავში - 24" loading="lazy">
                 </div>
             </div>
 
@@ -232,7 +231,7 @@
             <div class="footer-section">
                 <h4 data-i18n="footer.contact_info">საკონტაქტო ინფორმაცია</h4>
                 <p data-i18n="footer.phone">ტელეფონი: +995 551 305 305</p>
-                <p data-i18n="footer.email">ელ-ფოსტა: gmerabishvili1236@gmail.com</p>
+                <p data-i18n="footer.email">ელ-ფოსტა: megaplusrustavi@gmail.com</p>
                 <p data-i18n="footer.available">ხელმისაწვდომი: 24/7</p>
             </div>
             <div class="footer-section">
