--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
     <title>MEGA+ Towing - Professional Evacuation & Recovery Services 24/7</title>
     <link rel="icon" type="image/png" href="Photos/Logo.png">
     <!-- Critical CSS inline for faster FCP -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;500;700&display=swap');
       body { margin: 0; font-family: 'Noto Sans Georgian', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; }
       .header, .hero { background: #1a1a1a; color: white; }
       .navbar { display: flex; align-items: center; padding: 1rem 2rem; }
@@ -204,7 +202,7 @@
             <div class="footer-section">
                 <h4 data-i18n="footer.contact_info">საკონტაქტო ინფორმაცია</h4>
                 <p data-i18n="footer.phone">ტელეფონი: +995 551 305 305</p>
-                <p data-i18n="footer.email">ელ-ფოსტა: gmerabishvili1236@gmail.com</p>
+                <p data-i18n="footer.email">ელ-ფოსტა: megaplusrustavi@gmail.com</p>
                 <p data-i18n="footer.available">ხელმისაწვდომი: 24/7</p>
             </div>
             <div class="footer-section">
