--- a/privacy.html
+++ b/privacy.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>კონფიდენციალურობის პოლიტიკა - MEGA+ Evacuator</title>
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;500;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="styles.css">
-    
     <style>
-        /* აქ font-family შევცვალე 'Noto Sans Georgian'-ით */
-        body { margin: 0; font-family: 'Noto Sans Georgian', sans-serif; line-height: 1.6; color: #333; }
+        /* მარტივი სტილი ტექსტისთვის, რომ კარგად გამოჩნდეს */
+        body { font-family: sans-serif; line-height: 1.6; color: #333; }
         .legal-container { padding: 40px 20px; max-width: 800px; margin: 0 auto; background: #fff; }
         h1, h2 { color: #2c3e50; }
         ul { margin-bottom: 20px; }
