--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
       .header { background: white; color: #333; } 
       
       /* მთავარი სურათი (Hero) რჩება ისე, როგორც იყო */
-      .hero { background: #1a1a1a; color: white; min-height: 100vh; display: flex; align-items: center; background-image: url('./Photos/hero-bg.webp'); background-size: cover; background-position: center; }
+      .hero { background: #1a1a1a; color: white; display: flex; align-items: center; background-image: url('./Photos/hero-bg.webp'); background-size: cover; background-position: center; }
       
       .navbar { display: flex; align-items: center; padding: 1rem 2rem; }
     </style>
