Update privacy page and Georgian translations

--- a/privacy.html
+++ b/privacy.html
@@ -37,12 +37,12 @@
         <p><strong>ბოლო განახლება:</strong> 30 ნოემბერი, 2025</p>
 
         <h2>1. ზოგადი ინფორმაცია</h2>
-        <p>კომპანია "MEGA+ Evacuator" (შემდგომში "ჩვენ") პატივს სცემს მომხმარებლის პერსონალურ მონაცემებს. წინამდებარე პოლიტიკა განმარტავს, თუ როგორ ვამუშავებთ თქვენს ინფორმაციას "პერსონალურ მონაცემთა დაცვის შესახებ" საქართველოს კანონის შესაბამისად.</p>
+        <p>კომპანია "MEGA+ Evacuator" პატივს სცემს მომხმარებლის პერსონალურ მონაცემებს. წინამდებარე პოლიტიკა განმარტავს, თუ როგორ ვამუშავებთ თქვენს ინფორმაციას "პერსონალურ მონაცემთა დაცვის შესახებ" საქართველოს კანონის შესაბამისად.</p>
 
         <h2>2. რა ინფორმაციას ვაგროვებთ?</h2>
-        <p>ჩვენ ვაგროვებთ მხოლოდ იმ მინიმალურ ინფორმაციას, რაც მომსახურების გასაწევადაა საჭირო:</p>
+        <p>ჩვენ ვაგროვებთ მხოლოდ იმ ინფორმაციას, რაც მომსახურების გასაწევადაა საჭირო:</p>
         <ul>
-            <li><strong>საკონტაქტო ინფორმაცია:</strong> ტელეფონის ნომერი (როდესაც გვიკავშირდებით).</li>
+            <li><strong>საკონტაქტო ინფორმაცია:</strong> ტელეფონის ნომერი და მეილი (როდესაც გვიკავშირდებით).</li>
             <li><strong>ლოკაციის მონაცემები:</strong> თქვენი ადგილმდებარეობა, რომელსაც ნებაყოფლობით გვიზიარებთ (მაგ: WhatsApp-ის ან ზარის მეშვეობით) ევაკუატორის გამოსაძახებლად.</li>
             <li><strong>ტექნიკური მონაცემები:</strong> IP მისამართი, ბრაუზერის ტიპი და საიტზე ქცევის ისტორია (Google Analytics-ის მეშვეობით).</li>
         </ul>
