Symmetric footer layout: copyright left, legal links right

--- a/contact.html
+++ b/contact.html
@@ -262,8 +262,6 @@
                     <li><a href="services.html" data-i18n="nav.services">სერვისები</a></li>
                     <li><a href="gallery.html" data-i18n="nav.gallery">ფოტო გალერეა</a></li>
                     <li><a href="contact.html" data-i18n="nav.contact">კონტაქტი</a></li>
-                    <li><a href="privacy.html" data-i18n="footer.privacy">კონფიდენციალობა</a></li>
-                    <li><a href="terms.html" data-i18n="footer.terms">პირობები</a></li>
                 </ul>
             </div>
             <div class="footer-section">
@@ -282,6 +280,11 @@
         </div>
         <div class="footer-bottom">
             <p data-i18n="footer.copyright">&copy; 2025 MEGA+ Towing. All rights reserved.</p>
+            <div class="footer-legal-links">
+                <a href="privacy.html" data-i18n="footer.privacy">კონფიდენციალობა</a>
+                <span class="separator">|</span>
+                <a href="terms.html" data-i18n="footer.terms">პირობები</a>
+            </div>
         </div>
     </footer>
 
