--- a/terms.html
+++ b/terms.html
@@ -54,7 +54,7 @@
         <p>ადმინისტრაცია იტოვებს უფლებას, ნებისმიერ დროს შეცვალოს ეს წესები. ცვლილებები ძალაში შედის საიტზე გამოქვეყნებისთანავე.</p>
 
         <br>
-        <a href="index.html">მთავარ გვერდზე დაბრუნება</a>
+        <a href="index.html" class="back-link">მთავარ გვერდზე დაბრუნება</a>
     </div>
 </body>
 </html>
