--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
                     </div>
                     <div class="info-content">
                         <h4 data-i18n="contact_page.email_title">ელ-ფოსტა</h4>
-                        <p><a href="mailto:gmerabishvili1236@gmail.com" style="color: var(--light-text); text-decoration: none;">gmerabishvili1236@gmail.com</a></p>
+                        <p><a href="mailto:megaplusrustavi@gmail.com" style="color: var(--light-text); text-decoration: none;">megaplusrustavi@gmail.com</a></p>
                         <p style="font-size: 0.9rem; margin-top: 0.25rem;" data-i18n="contact_page.email_response">ვპასუხობთ, რაც შეიძლება სწრაფად</p>
                     </div>
                 </div>
@@ -267,7 +267,7 @@
             <div class="footer-section">
                 <h4 data-i18n="footer.contact_info">საკონტაქტო ინფორმაცია</h4>
                 <p data-i18n="footer.phone">ტელეფონი: +995 551 305 305</p>
-                <p data-i18n="footer.email">ელ-ფოსტა: gmerabishvili1236@gmail.com</p>
+                <p data-i18n="footer.email">ელ-ფოსტა: megaplusrustavi@gmail.com</p>
                 <p data-i18n="footer.available">ხელმისაწვდომი: 24/7</p>
             </div>
             <div class="footer-section">
